Improved user experience - Added warnings when executed with elevated privileges - Added warnings when working directory is not the project directory and resources are not found - Added early, clear errors when dependencies for building are not found - Actually use separate link script for controller configuration

--- a/server/.vscode/tasks.json
+++ b/server/.vscode/tasks.json
@@ -27,7 +27,7 @@
             "group": "build",
             "command": "mkdir",
             "args": [
-                "build", "&",
+                "-p", "build", "&",
                 "bear", "--output", "build/compile_commands.json", "--append", "--",
                 "make", "COMPILER=${input:compiler}", "BUILD_TYPE=${input:linuxBuildType}", "-j", "$(nproc", "--ignore=2)",
                 // Sadly, "make --dry-run", does not work, it intercepts commands
