Switched to piCore 14
Reasoning:
- piCore 13 had a 50% chance of booting without the wlan0 device due to race condition
- piCore 14 has a gpio library useful for further development

Problems:
- piCore 14 and 15 have missing i2c-mux drivers, but can be patched in
- piCore 15 has a genuine wifi stability regression, even with the bootparam fix it drops many packets
- piCore 16 is great
- BUT: 15 and 16 use the new OV9282 driver, which restricts exposure times way too much for us to use

General:
- Fixed issue with filetool and nonexisting vc4asm
- Fixed swap partition start being hardcoded
  - Still need to fix bootlooping when failing, easy fix doesn't work
- Added script to search the repositories for files
- Fixed 16bit I2C read

Changes for piCore 14:
- libvcsm was removed alongside other legacy videocore code
   - Since it's required, it's now built manually, as separate runtime library
- i2c-mux drivers are not included, which any custom camera driver needs
  - fixed by including i2c kernel modules as distributed by piCore separately
- require gcc_libs package for libatomic
- removed address sanitizer, cannot be found by gcc though it is there
- Fixed timeout writing 8 I2C registers at once, regression introduced in piCore 14

--- a/camera/CMakeLists.txt
+++ b/camera/CMakeLists.txt
@@ -8,22 +8,25 @@ endif()
 
 # Set build flags for debug and release
 set(SYMBOLS_FLAGS "-g -rdynamic -fno-omit-frame-pointer -ffunction-sections")
+# Broken on piCore 14 and 15, ld can't find libasan_preinit.o but it's in /usr/local/lib
+#set(SAN "-fsanitize=address")
+set(SAN "")
 set(LINK_FLAGS "-rdynamic")
-set(LINK_FLAGS_DEBUG "-fno-omit-frame-pointer -fsanitize=address")
+set(LINK_FLAGS_DEBUG "-fno-omit-frame-pointer ${SAN}")
 set(LINK_FLAGS_RELEASE "")
 set(CMAKE_C_FLAGS "${SYMBOLS_FLAGS} -Werror -Wall -std=gnu17")
-set(CMAKE_C_FLAGS_DEBUG "-O1 -fno-omit-frame-pointer -fsanitize=address")
+set(CMAKE_C_FLAGS_DEBUG "-O1 -fno-omit-frame-pointer ${SAN}")
 set(CMAKE_C_FLAGS_RELEASE "-O3")
 string(CONCAT CMAKE_CXX_FLAGS "${SYMBOLS_FLAGS} -std=c++17"
 	" -Wall -Wno-sign-compare -Wno-pointer-arith -Wno-format-overflow"
 	" -Wno-unused-label -Wno-unused-variable -Wno-unused-but-set-variable -Wno-unused-function")
-set(CMAKE_CXX_FLAGS_DEBUG "-O1 -fno-omit-frame-pointer -fsanitize=address")
+set(CMAKE_CXX_FLAGS_DEBUG "-O1 -fno-omit-frame-pointer ${SAN}")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
 # Make sure all libraries are present
 find_library(LIB_BCMH NAMES bcm_host)
 find_library(LIB_VCOS NAMES vcos)
-find_library(LIB_VCSM NAMES vcsm)
+find_library(LIB_VCSM NAMES vcsm PATHS ~/TrackingCamera)
 
 # Set program resources
 set(INCLUDES
@@ -31,6 +34,7 @@ set(INCLUDES
 	dependencies
 	source
 	../shared
+	../libvcsm
 )
 set(SOURCES
 	source/camera/gcs_v4l2.cpp
