Added 2D probing detection method
It generates rotations to check with the expensive 2D matching stage
this can account for differences in translation just fine

By default, it is much slower than existing 2D search
However, it has more potential and can more reliably detect targets with few points

By redistributing the rotations it is also possible to use e.g. the IMU to speed it up
This has been implemented partially as a proof of concept, but not used or tested

This method is required for some targets, but is a step down for others.

--- a/server/Makefile
+++ b/server/Makefile
@@ -166,7 +166,7 @@ SERVER_CPP = \
 	calib_target/reconstruction.cpp calib_target/aquisition.cpp calib_target/assembly.cpp \
 	point/sequence_data.cpp point/sequences2D.cpp point/triangulation.cpp \
 	target/target.cpp target/detection2D.cpp target/detection3D.cpp target/tracking2D.cpp \
-	tracking/tracking.cpp
+	tracking/cluster.cpp tracking/tracking.cpp
 #comm/server.cpp
 
 SERVER_SHARED_CPP = \
