Updated source dependencies Most notably, imgui, which improved font rendering - Also made the manual DPI change detection automatic Added explicit options for clang-gnu (current) and clang-libc to makefile - To ensure quickly it compiles on all compilers and libraries Updated source.txt of all dependencies to exactly specify commit/version

--- a/server/.vscode/tasks.json
+++ b/server/.vscode/tasks.json
@@ -145,9 +145,9 @@
         { // On Linux, allow selection of compiler
             "id": "compiler",
             "description": "Compiler:",
-            "default": "clang",
+            "default": "clang-gnu",
             "type": "pickString",
-            "options": [ "clang", "gcc" ]
+            "options": [ "clang-libc", "clang-gnu", "gcc" ]
         },
         { // On Linux, allow dependencies to be build with sanitized option on. Release/Debug not needed, all "release"
             "id": "sanitizedOption",
