Added MCU flashing by Pi via bootloader Have two ways to attempt to enter the bootloader - Send I2C to enter bootloader from user code     - Requires working program, not suitable if MCU is bricked - Reset with BOOT0 high     - Requires MCU to have BOOT0 pin enabled, blocking SWD
Former is dev default, but latter will be future default for increased resilience
Switching to BOOT0 over SWD and back is possible via buttons
May be possible via host software in the future, too

--- a/camera/CMakeLists.txt
+++ b/camera/CMakeLists.txt
@@ -44,6 +44,7 @@ set(SOURCES
 	source/comm/timesync.cpp
 	source/comm/wireless.cpp
 	source/mcu/mcu.cpp
+	source/mcu/stm32_bootloader.cpp
 	source/blob/detection.cpp
 	source/main.cpp
 	../shared/util/image.cpp
