Added basic firmware update utility - Added transfer of firmware data to cameras - Added updating of files on cameras SD - Fixed flashing of camera_mcu by camera_pi
Missing:
- Single firmware update packet with multiple files and descriptions
- Requiring user interaction with controller to allow updating
- Firmware signing
- Upgrading/adding packages to piCore
- Using USB Bulk transfers instead of Control to increase throughput
- Flashing controller firmware from within server interface
- Any actual versioning for firmware

--- a/camera/CMakeLists.txt
+++ b/camera/CMakeLists.txt
@@ -43,6 +43,7 @@ set(SOURCES
 	source/comm/uart.cpp
 	source/comm/timesync.cpp
 	source/comm/wireless.cpp
+	source/comm/firmware.cpp
 	source/mcu/mcu.cpp
 	source/mcu/stm32_bootloader.cpp
 	source/blob/detection.cpp
